--- a/views_bulk_reference_edit.info.yml
+++ b/views_bulk_reference_edit.info.yml
@@ -3,7 +3,7 @@ name: 'Views Bulk Reference Edit'
 description: 'Allows bulk edition of reference entity field values.'
 package: 'Views Bulk Operations'
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 dependencies:
   - drupal:views_bulk_operations
   - drupal:views_bulk_edit
